# tasknote

./: .gitignore  README.md  debug_list.py  pyproject.toml  test_task_env_manual.py
docs/: cli_design.md  cli_formal.md  task.md
tasknotes/: __init__.py  cli.py  config.py  git_integration.py  markdown.py  models.py  setup.py
tasknotes/cli/: __init__.py  cmd_active.py  cmd_add.py  cmd_archive.py  cmd_close.py  cmd_done.py  cmd_edit.py  cmd_help.py  cmd_init.py  cmd_list.py  cmd_mcp.py  cmd_note.py  cmd_open.py  cmd_remove.py  cmd_search.py  cmd_tag.py  commands.py  formatters.py  i18n.py  main.py  test_cli.py
tasknotes/cmds/: __init__.py  base_cmd.py  cmd_active.py  cmd_add.py  cmd_archive.py  cmd_close.py  cmd_done.py  cmd_edit.py  cmd_factory.py  cmd_help.py  cmd_init.py  cmd_list.py  cmd_mcp.py  cmd_note.py  cmd_open.py  cmd_remove.py  cmd_search.py  cmd_service.py  cmd_tag.py
tasknotes/core/: __init__.py  base_cmd.py  config.py  edit_service.py  edit_session_ot.py  file_edit.py  file_service.py  (+6 more)
tests/: __init__.py  debug_code_span_structure.py  debug_parse_function.py  debug_parse_function_detailed.py  debug_test_cases.py  debug_tree_sitter_code_span.py  debug_tree_sitter_inline.py  debug_tree_sitter_links.py  debug_tree_sitter_links_detailed.py  test_cmd_queue.py  test_core.py  test_edit_session.py  test_file_service.py  test_file_task_append.py  test_fs_local.py  test_list_item_text_range.py  test_markdown.py  test_new_sub_task.py  test_numbering_service.py  test_parse_task_inline.py  test_process_list_block.py  test_process_list_item.py  test_task_env.py
(+16 files in other folders)
