[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasknotes"
version = "0.1.0"
description = "A task management tool using markdown for recording tasks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TaskNotes Team"}
]
dependencies = [
    "myst-parser>=0.18.0",
    "click>=8.0.0",
    "markdown>=3.3.0",
    "pyyaml>=6.0",
    "rich>=12.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
tasknotes = "tasknotes.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[tool.setuptools]
packages = ["tasknotes"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
